--- a/inventory/sample/inventory.ini
+++ b/inventory/sample/inventory.ini
@@ -1,34 +1,37 @@
-# ## Configure 'ip' variable to bind kubernetes services on a
-# ## different ip than the default iface
-# ## We should set etcd_member_name for etcd cluster. The node that is not a etcd member do not need to set the value, or can set the empty string value.
 [all]
-# node1 ansible_host=95.54.0.12  # ip=10.3.0.1 etcd_member_name=etcd1
-# node2 ansible_host=95.54.0.13  # ip=10.3.0.2 etcd_member_name=etcd2
-# node3 ansible_host=95.54.0.14  # ip=10.3.0.3 etcd_member_name=etcd3
-# node4 ansible_host=95.54.0.15  # ip=10.3.0.4 etcd_member_name=etcd4
-# node5 ansible_host=95.54.0.16  # ip=10.3.0.5 etcd_member_name=etcd5
-# node6 ansible_host=95.54.0.17  # ip=10.3.0.6 etcd_member_name=etcd6
+master1 ansible_host=10.17.0.151 ip=10.17.0.151 etcd_member_name=etcd1
+master2 ansible_host=10.17.0.152 ip=10.17.0.152 etcd_member_name=etcd2
+master3 ansible_host=10.17.0.153 ip=10.17.0.153 etcd_member_name=etcd3
+worker1 ansible_host=10.17.0.161 ip=10.17.0.161
+worker2 ansible_host=10.17.0.162 ip=10.17.0.162
+worker3 ansible_host=10.17.0.163 ip=10.17.0.163
+worker4 ansible_host=10.17.0.164 ip=10.17.0.164
+worker5 ansible_host=10.17.0.165 ip=10.17.0.165
 
-# ## configure a bastion host if your nodes are not directly reachable
-# [bastion]
-# bastion ansible_host=x.x.x.x ansible_user=some_user
+[all:vars]
+ansible_user=root
+ansible_ssh_private_key_file=/tmp/Linux.pem
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
 [kube_control_plane]
-# node1
-# node2
-# node3
+master1
+master2
+master3
 
 [etcd]
-# node1
-# node2
-# node3
+master1
+master2
+master3
 
 [kube_node]
-# node2
-# node3
-# node4
-# node5
-# node6
+master1
+master2
+master3
+worker1
+worker2
+worker3
+worker4
+worker5
 
 [calico_rr]
 
