--- a/inventory/sample/inventory.ini
+++ b/inventory/sample/inventory.ini
@@ -7,14 +7,26 @@
 # We should set etcd_member_name for etcd cluster. The node that are not etcd members do not need to set the value,
 # or can set the empty string value.
 [kube_control_plane]
-# node1 ansible_host=95.54.0.12  # ip=10.3.0.1 etcd_member_name=etcd1
-# node2 ansible_host=95.54.0.13  # ip=10.3.0.2 etcd_member_name=etcd2
-# node3 ansible_host=95.54.0.14  # ip=10.3.0.3 etcd_member_name=etcd3
+master1 ansible_host=10.17.0.151 ip=10.17.0.151 etcd_member_name=etcd1
+master2 ansible_host=10.17.0.152 ip=10.17.0.152 etcd_member_name=etcd2
+master3 ansible_host=10.17.0.153 ip=10.17.0.153 etcd_member_name=etcd3
+
+[kube_control_plane:vars]
+ansible_user=root
+ansible_ssh_private_key_file=/tmp/Linux.pem
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
 [etcd:children]
 kube_control_plane
 
 [kube_node]
-# node4 ansible_host=95.54.0.15  # ip=10.3.0.4
-# node5 ansible_host=95.54.0.16  # ip=10.3.0.5
-# node6 ansible_host=95.54.0.17  # ip=10.3.0.6
+worker1 ansible_host=10.17.0.161 ip=10.17.0.161
+worker2 ansible_host=10.17.0.162 ip=10.17.0.162
+worker3 ansible_host=10.17.0.163 ip=10.17.0.163
+worker4 ansible_host=10.17.0.164 ip=10.17.0.164
+worker5 ansible_host=10.17.0.165 ip=10.17.0.165
+
+[kube_node:vars]
+ansible_user=root
+ansible_ssh_private_key_file=/tmp/Linux.pem
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
